--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
   "description": "hapijs webpack hotreload example",
   "main": "server.js",
   "dependencies": {
-    "babel-core": "^6.9.0",
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.9.0",
-    "file-loader": "^0.8.5",
-    "hapi": "^13.4.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "file-loader": "^0.9.0",
+    "hapi": "^15.2.0",
     "hapi-webpack-plugin": "^1.3.0",
-    "inert": "^4.0.0",
+    "inert": "^4.0.2",
     "jsx-loader": "^0.13.2",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
-    "webpack": "^2.1.0-beta.7"
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-hot-loader": "3.0.0-beta.6",
+    "webpack": "2.1.0-beta.27"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
