--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "file-loader": "^0.9.0",
     "hapi": "^15.2.0",
     "hapi-webpack-plugin": "^1.3.0",
+    "immutable": "^3.8.1",
     "inert": "^4.0.2",
     "jsx-loader": "^0.13.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-hot-loader": "3.0.0-beta.6",
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0",
+    "redux-devtools": "^3.3.1",
     "webpack": "2.1.0-beta.27"
   },
   "scripts": {
