--- a/package.json
+++ b/package.json
@@ -16,18 +16,24 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
+    "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
     "hapi-webpack-plugin": "^1.3.0",
     "immutable": "^3.8.1",
     "jsx-loader": "^0.13.2",
     "postcss": "^5.2.6",
     "postcss-cssnext": "^2.9.0",
+    "postcss-loader": "^1.1.1",
+    "postcss-simple-import": "^3.0.0",
+    "postcss-smart-import": "^0.6.0",
+    "precss": "^1.4.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-hot-loader": "3.0.0-beta.6",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
     "redux-devtools": "^3.3.1",
+    "style-loader": "^0.13.1",
     "webpack": "2.1.0-beta.27"
   },
   "scripts": {
