--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux": "^3.6.0",
     "redux-devtools": "^3.3.1",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "2.1.0-beta.27"
   },
   "scripts": {
